# location-service

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  HELP.md
src/: main.rs
src/config/: configs.rs  database.rs  mod.rs
src/controllers/: location.rs
src/dtos/: location_dto.rs  mod.rs  wrapper.rs
src/exceptions/: api_error.rs
src/models/: location.rs
src/repositories/: location_repository.rs  mod.rs
src/services/: location_service.rs  mod.rs
