[package]
name = "location-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
mongodm = "0.10.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
serde_json = "1.0.140"
tracing = "0.1.41"
